--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <p>2</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
                             <p>2</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                             <p>2</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="contenedor contenido-contacto">
             <h2>Encuentra la casa de tus sueños</h2>
             <p>Llena el formulario de Contacto y un asesor se podrá en contacto contigo a la brevedad</p>
-            <a href="#" class="boton boton-amarillo">Contáctanos</a>
+            <a href="contacto.html" class="boton boton-amarillo">Contáctanos</a>
         </div>
     </section>
    
@@ -147,7 +147,7 @@
                     <img src="img/blog1.jpg" alt="Terraza en el techo de tu casa">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="blog.html">
                         <h4>Terraza en el techo de tu casa</h4>
                     </a>
                     <p>Escrito el: <span>20/10/2019</span> por: <span>Admin</span></p>
@@ -160,7 +160,7 @@
                     <img src="img/blog2.jpg" alt="Guía para la Decoración de tu Hogar">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="blog.html">
                         <h4>Guía para la decoración de tu hogar</h4>
                     </a>
                     <p>Escrito el: <span>20/10/2019</span> por: <span>Admin</span></p>
